--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuex": "3.6.2"
   },
   "devDependencies": {
+    "@types/echarts": "^4.9.13",
     "@types/jest": "24.0.25",
     "@typescript-eslint/eslint-plugin": "4.28.4",
     "@typescript-eslint/parser": "4.28.4",
@@ -32,6 +33,7 @@
     "@vue/cli-service": "4.5.13",
     "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "1.2.2",
+    "echarts": "4.8.0",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "6.2.2",
     "sass": "1.36.0",
